--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <li>
 <p>Clone or download the project.</p>
 
-<p>a) If you have git already installed, just use <code>git clone git clone https://github.com/muffycompo/radiusdesk-installer.git</code>. <strong>Note:</strong> you can install git on RHEL/CentOS 6.x via yum (<code>yum install -y wget unzip</code>)</p>
+<p>a) If you have git already installed, just use <code>git clone git clone https://github.com/muffycompo/radiusdesk-installer.git</code>. <strong>Note:</strong> you can install git on RHEL/CentOS 6.x via yum (<code>yum install -y git</code>)</p>
 
 <p>b) If you prefer to download the zip file <code>wget -cL https://github.com/muffycompo/radiusdesk-installer/archive/master.zip</code>. <strong>Note:</strong> just make sure you have <strong>wget</strong> and <strong>unzip</strong> installed (<code>yum install -y wget unzip</code>)</p>
 </li>
