--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 
 <p>a) If you have git already installed, just use <code>git clone git clone https://github.com/muffycompo/radiusdesk-installer.git</code>. <strong>Note:</strong> you can install git on RHEL/CentOS 6.x via yum (<code>yum install -y git</code>)</p>
 
-<p>b) If you prefer to download the zip file <code>wget -cL https://github.com/muffycompo/radiusdesk-installer/archive/master.zip</code>. <strong>Note:</strong> just make sure you have <strong>wget</strong> and <strong>unzip</strong> installed (<code>yum install -y wget unzip</code>)</p>
+<p>b) If you prefer to download the zip file 
+<code>wget -cL https://github.com/muffycompo/radiusdesk-installer/archive/master.zip</code>. 
+<strong>Note:</strong> just make sure you have <strong>wget</strong> and <strong>unzip</strong> installed (<code>yum install -y wget unzip</code>)</p>
 </li>
 <li>Run/execute the Installer script as <strong>root</strong> <code>cd radiusdesk-installer; ./rd-installer</code> and walk through the wizard.</li>
-<li></li>Grab yourself a <strong>cup of Coffee</strong> as the installer provisions your server with RADIUSdesk.</li>
+<li>Grab yourself a <strong>cup of Coffee</strong> as the installer provisions your server with RADIUSdesk.</li>
 <li>When the script is done installing and configuring your system, we recommend rebooting your machine/server to ensure everything is persistent on reboot.</li>
 </ol><h3>
 <a name="limitations" class="anchor" href="#limitations"><span class="octicon octicon-link"></span></a>Limitations</h3>
