--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">RADIUSdesk Installer maintained by <a href="https://github.com/muffycompo">Mfawa Alfred Onen</a></p>
+        <p class="copyright">RADIUSdesk Installer is maintained by <a href="https://github.com/muffycompo">Mfawa Alfred Onen</a></p>
       </footer>
     </div>
 
