--- a/index.html
+++ b/index.html
@@ -52,12 +52,20 @@
 <li>Run/execute the Installer script as <strong>root</strong> <code>cd radiusdesk-installer; ./rd-installer</code> and walk through the wizard.</li>
 <li>Grab yourself a <strong>cup of Coffee</strong> as the installer provisions your server with RADIUSdesk.</li>
 <li>When the script is done installing and configuring your system, we recommend rebooting your machine/server to ensure everything is persistent on reboot.</li>
-</ol><h3>
+</ol>
+
+<h3><a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h3>
+<ol>
+  <li>A wizard for customizing Web server, Database Credentials (Host, User, Password & DB Name) and FreeRADIUS secret </li>
+  <li>Installer downloads latest copy of RADIUSdesk so that you are always on edge</li>
+  <li>Somewhat modularized, so you can always extend RADIUSdesk installer to support your environment</li>
+</ol>
+
+<h3>
 <a name="limitations" class="anchor" href="#limitations"><span class="octicon octicon-link"></span></a>Limitations</h3>
 
 <ol>
 <li>The installer only works RADIUSdesk on a RHEL/CentOS 6.x machines/servers</li>
-<li>Installer assumes default installation values (Database passwords, FreeRADIUS secrets etc)</li>
 <li>The installer does not install CoovaChilli for captive portal/ hotspot</li>
 </ol><h3>
 <a name="resources" class="anchor" href="#resources"><span class="octicon octicon-link"></span></a>Resources</h3>
@@ -69,12 +77,14 @@
 <li>
 <a href="http://www.radiusdesk.com">RADIUSdesk Project</a> by <a href="http://www.linkedin.com/pub/dirk-van-der-walt/11/b64/79a">Dirk van der Walt</a>
 </li>
+<li>
+<a href="http://www.maomuffy.com/radiusdesk-installer-project/">RADIUSdesk Installer Videos</a>
+</li>
 </ol><h3>
 <a name="todo" class="anchor" href="#todo"><span class="octicon octicon-link"></span></a>TODO</h3>
 
 <ol>
 <li>Make the installer Operating System agnostic (Support multiple Linux OS)</li>
-<li>Make installer to prompt users for Database user, password, RADIUS secret</li>
 <li>Allow users to optionally opt for CoovaChilli installation</li>
 </ol><h3>
 <a name="contributions" class="anchor" href="#contributions"><span class="octicon octicon-link"></span></a>Contributions</h3>
