--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <li>A wizard for customizing Web server, Database Credentials (Host, User, Password & DB Name) and FreeRADIUS secret </li>
   <li>Installer downloads latest copy of RADIUSdesk so that you are always on edge</li>
   <li>Somewhat modularized, so you can always extend RADIUSdesk installer to support your environment</li>
+  <li>Setup Captive Portal with CoovaChilli</li>
 </ol>
 
 <h3>
@@ -66,7 +67,6 @@
 
 <ol>
 <li>The installer only works RADIUSdesk on a RHEL/CentOS 6.x machines/servers</li>
-<li>The installer does not install CoovaChilli for captive portal/ hotspot</li>
 </ol><h3>
 <a name="resources" class="anchor" href="#resources"><span class="octicon octicon-link"></span></a>Resources</h3>
 
@@ -85,7 +85,6 @@
 
 <ol>
 <li>Make the installer Operating System agnostic (Support multiple Linux OS)</li>
-<li>Allow users to optionally opt for CoovaChilli installation</li>
 </ol><h3>
 <a name="contributions" class="anchor" href="#contributions"><span class="octicon octicon-link"></span></a>Contributions</h3>
 
