--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="RADIUSdesk Installer : This project tries to simplify or ease the process of getting a working installation of RadiusDESK on a vanilla/minimal installation of RHEL/CentOS 6.X (32 bit/64 bit)." />
+    <meta name="description" content="RADIUSdesk Installer : This project tries to simplify or ease the process of getting a working installation of RadiusDESK on a vanilla/minimal installation of RHEL/CentOS 6.x/Ubuntu 13.10 (32 bit/64 bit)." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/muffycompo/radiusdesk-installer">View on GitHub</a>
 
           <h1 id="project_title">RADIUSdesk Installer</h1>
-          <h2 id="project_tagline">This project tries to simplify or ease the process of getting a working installation of RADIUSdesk on a vanilla/minimal installation of RHEL/CentOS 6.X (32 bit/64 bit).</h2>
+          <h2 id="project_tagline">This project tries to simplify or ease the process of getting a working installation of RADIUSdesk on a vanilla/minimal installation of RHEL/CentOS 6.x/Ubuntu 13.10 (32 bit/64 bit).</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/muffycompo/radiusdesk-installer/zipball/master">Download this project as a .zip file</a>
@@ -34,7 +34,7 @@
         <h3>
 <a name="welcome-to-radiusdesk-installer" class="anchor" href="#welcome-to-radiusdesk-installer"><span class="octicon octicon-link"></span></a>Welcome to RADIUSdesk Installer</h3>
 
-<p>This project tries to simplify or ease the process of getting a working installation of RADIUSdesk on a vanilla/minimal installation of RHEL/CentOS 6.X (32 bit/64 bit). This will be an ongoing effort and there is plans to support more Distros (Fedora,Debian,Ubuntu etc) and so please feel free to contribute by sending a pull request.</p>
+<p>This project tries to simplify or ease the process of getting a working installation of RADIUSdesk on a vanilla/minimal installation of RHEL/CentOS 6.x/Ubuntu 13.10 (32 bit/64 bit). This will be an ongoing effort and there is plans to support more Distros (Fedora,Debian,Ubuntu etc) and so please feel free to contribute by sending a pull request.</p>
 
 <h3>
 <a name="installation--usage" class="anchor" href="#installation--usage"><span class="octicon octicon-link"></span></a>Installation &amp; Usage</h3>
@@ -63,11 +63,15 @@
 </ol>
 
 <h3>
-<a name="limitations" class="anchor" href="#limitations"><span class="octicon octicon-link"></span></a>Limitations</h3>
-
+<a name="compatibility" class="anchor" href="#compatibility"><span class="octicon octicon-link"></span></a>Compatibility</h3>
+<p>The installer has been tested on the following Linux Operating Systems</p>
 <ol>
-<li>The installer only works RADIUSdesk on a RHEL/CentOS 6.x machines/servers</li>
-</ol><h3>
+<li>CentOS 6.4/6.5 (64 bit)</li>  
+<li>Red Hat Enterprise Linux 6.4/6.5 (64 bit)</li> 
+<li>Ubuntu 13.10 (Saucy Salamander - 64 bit)</li>
+</ol>
+
+<h3>
 <a name="resources" class="anchor" href="#resources"><span class="octicon octicon-link"></span></a>Resources</h3>
 
 <ol>
@@ -80,16 +84,14 @@
 <li>
 <a href="http://www.maomuffy.com/radiusdesk-installer-project/">RADIUSdesk Installer Videos</a>
 </li>
-</ol><h3>
-<a name="todo" class="anchor" href="#todo"><span class="octicon octicon-link"></span></a>TODO</h3>
+</ol>
 
-<ol>
-<li>Make the installer Operating System agnostic (Support multiple Linux OS)</li>
-</ol><h3>
+<h3>
 <a name="contributions" class="anchor" href="#contributions"><span class="octicon octicon-link"></span></a>Contributions</h3>
 
 <ol>
 <li>Anyone is welcome to contribute by sending a pull request with your desired feature tested and implemented.</li>
+<li>If you have tested the installer in a Linux Distribution that is not in the compatibility list, kindly contact send an email to muffycompoqm[at]gmail[dot]com.</li>
 </ol><h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
