--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/muffycompo/radiusdesk-installer">View on GitHub</a>
 
           <h1 id="project_title">RADIUSdesk Installer</h1>
-          <h2 id="project_tagline">This project tries to simplify or ease the process of getting a working installation of RADIUSdesk on a vanilla/minimal installation of RHEL / CentOS 6.x / Ubuntu 13.10 (32 bit/64 bit).</h2>
+          <h2 id="project_tagline">This project tries to simplify or ease the process of getting a working installation of RADIUSdesk.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/muffycompo/radiusdesk-installer/zipball/master">Download this project as a .zip file</a>
