--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="welcome-to-radiusdesk-installer" class="anchor" href="#welcome-to-radiusdesk-installer"><span class="octicon octicon-link"></span></a>Welcome to RADIUSdesk Installer</h3>
 
-<p>This project tries to simplify or ease the process of getting a working installation of RADIUSdesk on a vanilla/minimal installation of RHEL/CentOS 6.x/Ubuntu 13.10 (32 bit/64 bit). This will be an ongoing effort and there is plans to support more Distros (like OpenSUSE etc) and so please feel free to contribute by sending a pull request.</p>
+<p>This project tries to simplify or ease the process of getting a working installation of RADIUSdesk on a vanilla/minimal installation of RHEL/CentOS 6.x/Ubuntu 13.10/14.04 (64 bit). This will be an ongoing effort and there is plans to support more Distros (like OpenSUSE etc) and so please feel free to contribute by sending a pull request.</p>
 
 <h3>
 <a name="installation--usage" class="anchor" href="#installation--usage"><span class="octicon octicon-link"></span></a>Installation &amp; Usage</h3>
@@ -68,7 +68,7 @@
 <ol>
 <li>CentOS 6.4/6.5 (64 bit)</li>  
 <li>Red Hat Enterprise Linux 6.4/6.5 (64 bit)</li> 
-<li>Ubuntu 13.10 (Saucy Salamander - 64 bit)</li>
+<li>Ubuntu 13.10/14.04 (64 bit)</li>
 </ol>
 
 <h3>
