--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
 </ol>
 
 <h3>
+<a name="contributors" class="anchor" href="#contributors"><span class="octicon octicon-link"></span></a>Contributors</h3>
+<ul>
+  <li>Dirk van der Walt</li>
+  <li>Kenneth Peter S. Bongolan</li>
+</ul>
+
+<h3>
 <a name="contributions" class="anchor" href="#contributions"><span class="octicon octicon-link"></span></a>Contributions</h3>
 
 <ol>
