Add ansible installation requirement

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <p>b) If you prefer to download the zip file <code>wget -cL https://github.com/muffycompo/radiusdesk-installer/archive/master.zip</code>. <strong>Note:</strong> just make sure you have <strong>wget</strong> and <strong>unzip</strong> installed using (<code>yum install -y wget unzip</code>) on RHEL/CentOS 6.x and (<code>apt-get install -y wget unzip</code>) on Ubuntu servers.</p>
 
-<p>c) Ensure you have installed python as Ansible requires python to run.
-<strong>Note:</strong> you can install python on RHEL/CentOS 6.x via yum (<code>yum install -y python</code>) or Ubuntu via apt (<code>apt-get install -y python</code>).</p>
+<p>c) Ensure you have installed ansible and python for the installer to run.
+<strong>Note:</strong> you can install python on RHEL/CentOS 6.x via yum (<code>yum install -y ansible python</code>) or Ubuntu via apt (<code>apt-get install -y ansible python</code>).</p>
 
 <p>d) SSH into the local/remote server atleast once to have SSH add an entry in its <code>known_hosts</code> file. i.e. <code>ssh localhost</code> or <code>ssh 192.168.23.101</code></p>
 
