Add Walkthrough video #2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <p>RADIUSDesk Installer is an <a href="http://www.ansible.com">Ansible</a> powered utility that attempts to simplify or ease the process of getting a working installation of <a href="http://www.radiusdesk.com">RADIUSDesk</a> on a vanilla/minimal installation of RHEL/CentOS 6.X/Ubuntu 14.04/15.04/15.10 servers. The Installer utilizes Ansible's powerful features like agentless modes, idempotent runs etc.</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VedzdhcBD5A?list=PLGr0yiDOhXND3tBk56HLkI6cVKiqGHbLN" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VedzdhcBD5A" frameborder="0" allowfullscreen></iframe>
 
 <h2>
 <a id="installation--usage" class="anchor" href="#installation--usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation &amp; Usage</h2>
