Add Youtube Video embed

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ apt-get install -y ansible
 
 <h2>
 <a id="video-walkthrough" class="anchor" href="#video-walkthrough" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Video Walkthrough</h2>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VedzdhcBD5A" frameborder="0" allowfullscreen></iframe>
 
 
 <h2>
