--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">RADIUSDesk Installer</h1>
-      <h2 class="project-tagline">This project tries to simplify or ease the process of getting a working installation of RADIUSDesk on a vanilla/minimal installation of RHEL/CentOS 6.X (32 bit/64 bit) and Ubuntu 14.04/15.04/15.10 servers.</h2>
+      <h1 class="project-name">RADIUSDesk Installer 1.2.0</h1>
+      <h2 class="project-tagline">This project tries to simplify or ease the process of getting a working installation of RADIUSDesk on a vanilla/minimal installation of RHEL/CentOS 6.x/7.x and Ubuntu 14.x/15.x servers.</h2>
       <a href="https://github.com/muffycompo/radiusdesk-installer" class="btn">View on GitHub</a>
       <a href="https://github.com/muffycompo/radiusdesk-installer/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/muffycompo/radiusdesk-installer/tarball/master" class="btn">Download .tar.gz</a>
@@ -25,15 +25,15 @@
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
 
-<p>RADIUSDesk Installer is an <a href="http://www.ansible.com">Ansible</a> powered utility that attempts to simplify the process of getting a working installation of <a href="http://www.radiusdesk.com">RADIUSDesk</a> on a vanilla/minimal installation of RHEL/CentOS 6.X/Ubuntu 14.04/15.04/15.10 servers.</p>
+<p>RADIUSDesk Installer is an <a href="http://www.ansible.com">Ansible</a> powered utility that attempts to simplify the process of getting a working installation of <a href="http://www.radiusdesk.com">RADIUSDesk</a> on a vanilla/minimal installation of RHEL/CentOS 6.x/7.x/Ubuntu 14.04/15.04/15.10 servers.</p>
 
 <h2>
 <a id="prerequisite" class="anchor" href="#prerequisite" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Prerequisite</h2>
 
 <h4>
-<a id="1-install-python-27" class="anchor" href="#1-install-python-27" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1] Install Python 2.7+</h4>
+<a id="1-install-python-27" class="anchor" href="#1-install-python-27" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1] Install Python</h4>
 
-<p>Because RADIUDesk Installer uses Ansible, you must ensure that python 2.7+ is installed on both the Control[the server you will be running RADIUSDesk Installer] and Managed [the server you will like to setup RADIUSDesk on] Node(s) to fulfill a requirement for Ansible. As of the time of this writing, Python 3 is not supported by Ansible so please take note. <a href="http://docs.ansible.com/ansible/intro_installation.html#managed-node-requirements">Managed Node Requirements</a></p>
+<p>As of the time of this writing, Python 3 is not supported by Ansible so please take note. <a href="http://docs.ansible.com/ansible/intro_installation.html#managed-node-requirements">Managed Node Requirements</a></p>
 
 <p>To Install Python which should come by default in most Linux distributions, you can use your package manager:</p>
 
@@ -62,8 +62,7 @@ yum install -y ansible
 
 <p><strong>Ubuntu 14.x/15.x</strong></p>
 
-<pre><code>apt-get install -y software-properties-common python-software-properties
-apt-add-repository ppa:ansible/ansible
+<pre><code>apt-add-repository ppa:ansible/ansible
 apt-get update
 apt-get install -y ansible
 </code></pre>
@@ -105,8 +104,8 @@ apt-get install -y ansible
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 
 <ol>
-<li><p>A very customizable installer (Edit <code>roles/radiusdesk/vars/Debian.yml</code> or <code>roles/radiusdesk/vars/RedHat.yml</code> depending on your Operating System family like Debian, RedHat etc). <strong>Note:</strong> ensure you use a YAML linter to check your syntax anytime you make any change to the variable file(s).</p></li>
-<li><p>Somewhat modularized, so you can always extend RADIUSDesk installer to support your environment</p></li>
+<li><p>RADIUSDesk installer is Customizable (Edit <code>roles/radiusdesk/vars/Debian.yml</code> or <code>roles/radiusdesk/vars/RedHat.yml</code> depending on your Operating System family like Debian, RedHat etc). <strong>Note:</strong> ensure you use a YAML linter to check your syntax anytime you make any change to the variable file(s).</p></li>
+<li><p>Somewhat modularized, so you can always extend RADIUSDesk installer to support your ever growing environment</p></li>
 <li><p>Support for PPTPD <strong>[Optional]</strong></p></li>
 <li><p>Support for CoovaChilli Captive portal <strong>[Optional]</strong></p></li>
 <li><p>Support for Dynamic Login Pages <strong>[Optional]</strong></p></li>
@@ -116,13 +115,13 @@ apt-get install -y ansible
 <a id="compatibility" class="anchor" href="#compatibility" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Compatibility</h2>
 
 <ol>
-<li><strong>Ansible 1.9+</strong></li>
+<li><p>RADIUSDesk Installer is Compatible with Ansible 1.9+</p></li>
 <li>
-<p>The installer has been tested on the following Linux Operating Systems:</p>
+<p>RADIUSDesk Installer has been tested on the following Linux Distros:</p>
 
 <ul>
-<li><strong>RHEL/CentOS 6.5/6.7 (32/64 bit)</strong></li>
-<li><strong>Ubuntu 14.04/15.04/15.10 (32/64 bit)</strong><br>
+<li><strong>RHEL/CentOS 6.x/7.x</strong></li>
+<li><strong>Ubuntu 14.x/15.x</strong><br>
 </ul>
 </li>
 </ol>
@@ -132,7 +131,7 @@ apt-get install -y ansible
 
 <ol>
 <li>
-<a href="http://www.maomuffy.com/introduction-to-radiusdesk-with-rhelcentos-6-x-mini-course/">RADIUSDesk Course/Tutorials</a> by <a href="http://ng.linkedin.com/in/mfawaalfredonen/">Mfawa Alfred Onen</a>
+<a href="http://www.maomuffy.com/introduction-to-radiusdesk-with-rhelcentos-6-x-mini-course/">RADIUSDesk Mini Course (Old)</a> by <a href="http://ng.linkedin.com/in/mfawaalfredonen/">Mfawa Alfred Onen</a>
 </li>
 <li>
 <a href="http://www.radiusdesk.com">RADIUSDesk Project</a> by <a href="http://www.linkedin.com/pub/dirk-van-der-walt/11/b64/79a">Dirk van der Walt</a>
@@ -145,7 +144,7 @@ apt-get install -y ansible
 
 <ol>
 <li>Anyone is welcome to contribute by sending a pull request with your desired feature tested and implemented.</li>
-<li>If you have tested the installer in a Linux Distribution that is not in the compatibility list, kindly contact send an email to muffycompoqm[at]gmail[dot]com.</li>
+<li>If you have tested the installer in a Linux Distribution that is not in the compatibility list, kindly send an email to muffycompoqm[at]gmail[dot]com.</li>
 </ol>
 
       <footer class="site-footer">
