Update Installation Guide 3

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="radiusdesk-installer" class="anchor" href="#radiusdesk-installer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>RADIUSDesk Installer</h1>
+      <!-- <h1>
+<a id="radiusdesk-installer" class="anchor" href="#radiusdesk-installer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>RADIUSDesk Installer</h1> -->
 
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
