Correct typo in FAQ & known Issues section

--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@ apt-get install -y ansible
   Why do I get an SSL3 handshake error when running RADIUSDesk Installer on Ubuntu 14.x?
   <ul>
     <li>Ubuntu 14.x comes with python 2.7.6 and will need to be upgraded to 2.7.9+ as follows:<br>
-<pre><code>
-sudo apt-add-repository ppa:fkrull/deadsnakes-python2.7
+<pre><code>sudo apt-add-repository ppa:fkrull/deadsnakes-python2.7
 sudo apt-get update
 sudo apt-get upgrade
 </code></pre>
